# Formbook_Config_extraction

./: README.md  pyproject.toml  requirements.txt
extracavator/: main.py
extracavator/config/: patterns.py
extracavator/samples/: not.txt
extracavator/utils/: formbook_decryption.py  formbook_extractor.py
