[tool.poetry]
name = "extracavator"
version = "0.1.0"
description = ""
authors = ["Taha Yildiz"]

[tool.poetry.dependencies]
python = "^2.7"
pycrypto = "^2.6.1"
pefile = "2019.4.18"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
